[tool.poetry]
name = "ecl-course-2024-t4"
version = "0.1.0"
description = ""
authors = ["Jean-baptiste Aujogue <jb.aujogue@gmail.com>"]
readme = "README.md"
packages = [{include = "eclyon", from = "src"}]

[tool.poetry.dependencies]
catboost = "^1.2.7"
dill = "^0.3.9"
numpy = "1.26.0"
pandas = "^2.2.3"
python = ">=3.11,<3.13"
scikit-learn = "^1.5.2"
streamlit = "^1.39.0"

[tool.poetry.group.dev.dependencies]
graphviz = "^0.20.3"
jupyter = "^1.1.1"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
